--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,77 +7,156 @@ services:
     container_name: eurekaserver
     ports:
       - "8761:8761"
+    networks:
+      - microservices-v2
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8761/actuator/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  postgres:
+  postgres-user:
     image: postgres:15
-    container_name: postgres-microservice-db
+    container_name: postgres-user-db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: userdb
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata-user:/var/lib/postgresql/data
+    networks:
+      - microservices-v2
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  postgres-department:
+    image: postgres:15
+    container_name: postgres-department-db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: departmentdb
+    ports:
+      - "5434:5432"
+    volumes:
+      - pgdata-department:/var/lib/postgresql/data
+    networks:
+      - microservices-v2
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  postgres-address:
+    image: postgres:15
+    container_name: postgres-address-db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: addressdb
+    ports:
+      - "5435:5432"
+    volumes:
+      - pgdata-address:/var/lib/postgresql/data
+    networks:
+      - microservices-v2
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   userservice:
+    restart: unless-stopped
     build:
       context: ./user-service
     container_name: user-service
     depends_on:
-      - eurekaserver
-      - postgres
+      eurekaserver:
+        condition: service_healthy
+      postgres-user:
+        condition: service_healthy
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/userdb
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-user:5432/userdb
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: admin
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8761/eureka/
     ports:
       - "8081:8081"
+    networks:
+      - microservices-v2  
 
   departmentservice:
+    restart: unless-stopped
     build:
       context: ./department-service
     container_name: department-service
     depends_on:
-      - eurekaserver
-      - postgres
+      eurekaserver:
+        condition: service_healthy
+      postgres-department:
+        condition: service_healthy
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/departmentdb
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-department:5432/departmentdb
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: admin
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8761/eureka/
     ports:
       - "8083:8083"
+    networks:
+      - microservices-v2  
   
   addressservice:
+    restart: unless-stopped
     build:
       context: ./address-service
     container_name: address-service
     depends_on:
-      - eurekaserver
-      - postgres
+      eurekaserver:
+        condition: service_healthy
+      postgres-address:
+        condition: service_healthy
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/addressdb
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-address:5432/addressdb
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: admin
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8761/eureka/
     ports:
       - "8082:8082"
+    networks:
+      - microservices-v2  
 
   apigateway:
     build:
       context: ./api-gateway
     container_name: api-gateway
     depends_on:
-      - eurekaserver
-      - userservice
-      - departmentservice
-      - addressservice
+      eurekaserver:
+        condition: service_healthy
+      userservice:
+        condition: service_started
+      departmentservice:
+        condition: service_started
+      addressservice:
+        condition: service_started
     environment:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8761/eureka/
     ports:
       - "8080:8080"
+    networks:
+      - microservices-v2  
+
+networks:
+  microservices-v2:
+    driver: bridge
 
 volumes:
-  pgdata:
+  pgdata-user:
+  pgdata-department:
+  pgdata-address:
